fix about page alignment, fixes #67

--- a/css/styles.css
+++ b/css/styles.css
@@ -1195,7 +1195,7 @@ footer {
 
 .about-bio-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 6.25rem 10rem;
   gap: 1.25rem;
 }
@@ -1205,21 +1205,20 @@ footer {
   font-weight: var(--semi-bold);
   font-size: 1.44rem;
   margin: 0;
-  padding: 1rem 0;
-  margin: 0;
 }
 
 .about-bio-content {
   display: flex;
-  flex-direction: row;
-  gap: 3.75rem;
+  flex: 1;
+  flex-direction: column;
+  gap: 1.75rem;
 }
 
 .about-bio-text {
-  /*background-color: var(--primary5);*/
-  padding: 0 1.5rem;
+  padding: 0 0.75rem;
+  padding-bottom: 0.5rem;
+  margin: 0;
   border-radius: 8px;
-  flex: 1;
   font-family: var(--poppins);
   font-weight: normal;
   font-size: 1rem;
